Overriding whole components

--- a/theme/special-box/theme.less
+++ b/theme/special-box/theme.less
@@ -1,6 +1,11 @@
 @bgc: green;
 :host {
   &:after {
+    @media (min-width: 700px) {
+      @bgc: red;
+      color: darken(@bgc, 5%);
+    }
     content: 'grassy';
+    color: darken(@bgc, 5%);
   }
 }
