--- a/theme/theme-box/theme-box.component.less
+++ b/theme/theme-box/theme-box.component.less
@@ -1,9 +1,9 @@
-@bgc: black;
+@bgc: gray;
 
 :host {
   display: block;
   background-color: @bgc;
-  color: yellow;
+  color: red;
   height: 100px;
   max-width: 300px;
   border: 1px solid @bgc;
