--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <div style="text-align:center">
   <h1 class="title">Welcome to {{ title }}!</h1>
 
-  <app-box class="grass-box"></app-box>
+  <app-box theme class="grass-box"></app-box>
 </div>
